--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="white">#FFFFFF</color>
     <color name="black_transparent">#C0000000</color>
+    <color name="white_transparent">#C0FFFFFF</color>
 </resources>
