--- a/app/src/main/res/layout/forecast_fragment.xml
+++ b/app/src/main/res/layout/forecast_fragment.xml
@@ -5,11 +5,29 @@
 
     <data>
 
+        <import type="java.text.SimpleDateFormat" />
+
         <import type="com.emreeran.weather.db.entity.Location" />
+
+        <import type="com.emreeran.weather.db.entity.Forecast" />
+
+        <import type="com.emreeran.weather.db.entity.ForecastDay" />
+
+        <variable
+            name="hourDateFormat"
+            type="SimpleDateFormat" />
 
         <variable
             name="location"
             type="Location" />
+
+        <variable
+            name="forecast"
+            type="Forecast" />
+
+        <variable
+            name="today"
+            type="ForecastDay" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,27 +41,108 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="18dp"
             android:text="@{location.name}"
-            android:textColor="@color/white"
-            android:textSize="28sp"
+            android:textSize="30sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="San Francisco" />
 
         <TextView
+            android:id="@+id/state_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:text='@{today != null ? today.stateName : null}'
+            android:textSize="16sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/location_name"
+            tools:text="Windy" />
+
+        <TextView
+            android:id="@+id/current_temp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:paddingStart="8dp"
             android:paddingLeft="8dp"
             android:paddingEnd="0dp"
             android:paddingRight="0dp"
-            android:textColor="@color/white"
-            android:textSize="46sp"
+            android:text='@{today != null ? @string/temp(String.format("%.1f",today.currentTemp)) : null}'
+            android:textSize="50sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/location_name"
+            app:layout_constraintTop_toBottomOf="@+id/state_name"
             tools:text="26°" />
 
+        <View
+            android:id="@+id/content_divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="18dp"
+            android:background="@color/white_transparent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/current_temp" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/center_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5" />
+
+        <TextView
+            android:id="@+id/sunrise_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:paddingStart="18dp"
+            android:paddingLeft="18dp"
+            android:paddingEnd="0dp"
+            android:paddingRight="0dp"
+            android:text="@string/sunrise"
+            android:textColor="@color/white_transparent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/center_guideline"
+            app:layout_constraintTop_toBottomOf="@+id/content_divider" />
+
+        <TextView
+            android:id="@+id/sunset_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="18dp"
+            android:layout_marginRight="18dp"
+            android:text="@string/sunset"
+            android:textColor="@color/white_transparent"
+            app:layout_constraintLeft_toRightOf="@+id/center_guideline"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/content_divider" />
+
+        <TextView
+            android:id="@+id/sunrise"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:paddingStart="18dp"
+            android:paddingLeft="18dp"
+            android:paddingEnd="0dp"
+            android:paddingRight="0dp"
+            android:text='@{today != null ? hourDateFormat.format(forecast.sunrise) : null}'
+            android:textSize="28sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/center_guideline"
+            app:layout_constraintTop_toBottomOf="@+id/sunrise_title"
+            tools:text="05:31" />
+
+
+        <TextView
+            android:id="@+id/sunset"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text='@{today != null ? hourDateFormat.format(forecast.sunset) : null}'
+            android:textSize="28sp"
+            app:layout_constraintLeft_toRightOf="@+id/center_guideline"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sunset_title"
+            tools:text="19:42" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
