--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,14 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="SubTitleTextStyle" parent="AppTextStyle">
+        <item name="android:textSize">18sp</item>
+        <item name="android:layout_marginTop">18dp</item>
+        <item name="android:textColor">@color/white_transparent</item>
+    </style>
+
+    <style name="SubContentTextStyle" parent="AppTextStyle">
+        <item name="android:textSize">24sp</item>
+    </style>
+
 </resources>
