--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,50 @@
         <item name="android:textSize">24sp</item>
     </style>
 
+    <style name="StartSubTitleTextStyle" parent="SubTitleTextStyle">
+        <item name="android:paddingStart">18dp</item>
+        <item name="android:paddingLeft">18dp</item>
+        <item name="android:paddingEnd">0dp</item>
+        <item name="android:paddingRight">0dp</item>
+        <item name="android:gravity">start</item>
+    </style>
+
+    <style name="EndSubTitleTextStyle" parent="SubTitleTextStyle">
+        <item name="android:paddingStart">0dp</item>
+        <item name="android:paddingLeft">0dp</item>
+        <item name="android:paddingEnd">18dp</item>
+        <item name="android:paddingRight">18dp</item>
+        <item name="android:gravity">end</item>
+    </style>
+
+
+    <style name="StartSubContentTextStyle" parent="SubContentTextStyle">
+        <item name="android:paddingStart">18dp</item>
+        <item name="android:paddingLeft">18dp</item>
+        <item name="android:paddingEnd">0dp</item>
+        <item name="android:paddingRight">0dp</item>
+        <item name="android:gravity">start</item>
+    </style>
+
+    <style name="EndSubContentTextStyle" parent="SubContentTextStyle">
+        <item name="android:paddingStart">0dp</item>
+        <item name="android:paddingLeft">0dp</item>
+        <item name="android:paddingEnd">18dp</item>
+        <item name="android:paddingRight">18dp</item>
+        <item name="android:gravity">end</item>
+    </style>
+
+    <style name="HorizontalDividerStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:background">@color/white_transparent</item>
+    </style>
+
+    <style name="HorizontalContentDividerStyle" parent="HorizontalDividerStyle">
+        <item name="android:layout_marginLeft">8dp</item>
+        <item name="android:layout_marginStart">8dp</item>
+        <item name="android:layout_marginRight">8dp</item>
+        <item name="android:layout_marginEnd">8dp</item>
+    </style>
 </resources>
