--- a/app/src/main/res/layout/forecast_fragment.xml
+++ b/app/src/main/res/layout/forecast_fragment.xml
@@ -41,8 +41,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black_transparent"
-        android:paddingBottom="32dp">
+        android:background="@color/black_transparent">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/center_guideline"
@@ -129,14 +128,16 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/content_divider_1">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingBottom="32dp">
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/scroll_center_guideline"
