Added search icon

--- a/app/src/main/res/layout/location_search_fragment.xml
+++ b/app/src/main/res/layout/location_search_fragment.xml
@@ -18,8 +18,8 @@
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginRight="8dp"
-            android:drawableEnd="@android:drawable/ic_menu_search"
-            android:drawableRight="@android:drawable/ic_menu_search"
+            android:drawableEnd="@drawable/ic_search"
+            android:drawableRight="@drawable/ic_search"
             android:hint="@string/search_location"
             android:textSize="18sp"
             app:layout_constraintLeft_toLeftOf="parent"
