--- a/app/src/main/res/layout/location_search_fragment.xml
+++ b/app/src/main/res/layout/location_search_fragment.xml
@@ -9,7 +9,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/black_transparent">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/search"
@@ -18,9 +19,11 @@
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginRight="8dp"
-            android:drawableEnd="@drawable/ic_search"
-            android:drawableRight="@drawable/ic_search"
+            android:drawableEnd="@drawable/ic_search_white"
+            android:drawableRight="@drawable/ic_search_white"
             android:hint="@string/search_location"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white_transparent"
             android:textSize="18sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
