--- a/app/src/main/res/layout/location_item.xml
+++ b/app/src/main/res/layout/location_item.xml
@@ -3,21 +3,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <import type="com.emreeran.weather.db.entity.Location" />
+
+        <variable
+            name="location"
+            type="Location" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:background="@color/black_transparent">
+        android:paddingStart="18dp"
+        android:paddingLeft="18dp"
+        android:paddingTop="12dp"
+        android:paddingEnd="18dp"
+        android:paddingRight="18dp"
+        android:paddingBottom="12dp"
+        tools:background="@color/grey">
 
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="18dp"
-            android:paddingLeft="18dp"
-            android:paddingTop="4dp"
-            android:paddingEnd="0dp"
-            android:paddingRight="0dp"
-            android:paddingBottom="4dp"
+            android:text="@{location.name}"
             android:textSize="18sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
