--- a/app/src/main/res/layout/forecast_fragment.xml
+++ b/app/src/main/res/layout/forecast_fragment.xml
@@ -41,7 +41,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black_transparent">
+        android:background="@color/grey">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/center_guideline"
