--- a/app/src/main/res/menu/forecast_menu.xml
+++ b/app/src/main/res/menu/forecast_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_search"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/ic_search_white"
         android:title="@string/search_location"
         app:showAsAction="always" />
 </menu>
