--- a/app/src/main/res/layout/location_search_fragment.xml
+++ b/app/src/main/res/layout/location_search_fragment.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black_transparent">
+        android:background="@color/grey">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/search"
@@ -22,6 +22,8 @@
             android:drawableEnd="@drawable/ic_search_white"
             android:drawableRight="@drawable/ic_search_white"
             android:hint="@string/search_location"
+            android:lines="1"
+            android:singleLine="true"
             android:textColor="@color/white"
             android:textColorHint="@color/white_transparent"
             android:textSize="18sp"
