--- a/app/src/main/res/layout/forecast_fragment.xml
+++ b/app/src/main/res/layout/forecast_fragment.xml
@@ -221,7 +221,7 @@
                     style="@style/StartSubContentTextStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text='@{today != null ? hourDateFormat.format(forecast.sunrise) : null}'
+                    android:text='@{forecast != null ? hourDateFormat.format(forecast.sunrise) : null}'
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toLeftOf="@+id/scroll_center_guideline"
                     app:layout_constraintTop_toBottomOf="@+id/sunrise_title"
@@ -233,7 +233,7 @@
                     style="@style/EndSubContentTextStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text='@{today != null ? hourDateFormat.format(forecast.sunset) : null}'
+                    android:text='@{forecast != null ? hourDateFormat.format(forecast.sunset) : null}'
                     app:layout_constraintLeft_toRightOf="@+id/scroll_center_guideline"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/sunset_title"
